# CameraStreamingToolkit

./: README.md  benchmark.py  c_config.py  client.py  dev.sh  main.py  s_config.py  sender.py
Lora/: README.md  lora.py
SocketIO/: main.py
SocketIO/static/: client.js
SocketIO/templates/: index.html
cpp/: CMakeLists.txt  stream.cpp  stream.cpp.back
cpp/gzip/: compress.hpp
static/: client.js
templates/: index.html
wip/: receiver.py  sender.py
