cmake_minimum_required(VERSION 2.8)
project( stream )
find_package( OpenCV REQUIRED )
find_package( ZLIB REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( stream stream.cpp )
include_directories(gzip)
target_link_libraries(stream ZLIB::ZLIB)
target_link_libraries( stream ${OpenCV_LIBS} )
