cmake_minimum_required(VERSION 2.8)
project( stream )
find_package( OpenCV REQUIRED )
find_package( ZLIB REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( stream stream.cpp )
include_directories(gzip)
include_directories(crow)
target_link_libraries(stream ZLIB::ZLIB)
SET(Boost_USE_MULTITHREADED ON)
TARGET_LINK_LIBRARIES(stream ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries( stream ${OpenCV_LIBS} )
